--- a/app/views/issues/_attributes.html.erb
+++ b/app/views/issues/_attributes.html.erb
@@ -4,10 +4,10 @@
 <div class="splitcontentleft">
 <% if @issue.safe_attribute?('status_id') && @allowed_statuses.present? %>
 <p><%= f.select :status_id, (@allowed_statuses.collect {|p| [p.name, p.id]}), {:required => true},
-                :onchange => "updateIssueFrom('#{escape_javascript project_issue_form_path(@project, :id => @issue, :format => 'js')}')" %></p>
-
+                :onchange => "updateIssueFrom('#{escape_javascript update_issue_form_path(@project, @issue)}')" %></p>
+<%= hidden_field_tag 'was_default_status', @issue.status_id, :id => nil if @issue.status == @issue.default_status %>
 <% else %>
-<p><label><%= l(:field_status) %></label> <%= h(@issue.status.name) %></p>
+<p><label><%= l(:field_status) %></label> <%= @issue.status %></p>
 <% end %>
 
 <% if @issue.safe_attribute? 'priority_id' %>
@@ -19,7 +19,7 @@
 <% end %>
 
 <% if @issue.safe_attribute?('category_id') && @issue.project.issue_categories.any? %>
-<p><%= f.select :category_id, (@issue.project.issue_categories.reject {|c| c.archived }.collect {|c| [c.name, c.id] }), :include_blank => true, :required => @issue.required_attribute?('category_id') %>
+<p><%= f.select :category_id, (@issue.project.issue_categories.reject {|c| c.archived }.collect {|c| [c.name, c.id]}), :include_blank => true, :required => @issue.required_attribute?('category_id') %>
 <%= link_to(image_tag('add.png', :style => 'vertical-align: middle;'),
             new_project_issue_category_path(@issue.project),
             :remote => true,
